# twitter-followings-crawler

./: .gitignore  LICENSE  README.md  fetch_followings.py  fix_banner_extension.py  pyproject.toml  start_relay.sh
data/: following.sample.js
