[project]
name = "twitter-followings-crawler"
version = "0.1.0"
description = "Twitter followings crawler using Nitter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[project.scripts]
followings-crawl = "fetch_followings:main"
